# pytest-allure-report-example

./: .gitignore  1233e5ef-7bf7-42a4-835f-45c212db18d9-result.json  15a23d6e-d303-4282-9fdb-e4ea693ec8e4-result.json  1c7f8f51-1f5d-4760-ba6a-4e5e604f1aa7-container.json  2ad95338-a91c-4252-bc1a-62e85b83e771-result.json  311c6497-2d22-482e-b184-8109349ca7c2-result.json  3b66dc00-d854-4056-affa-2156b07eaaf6-result.json  47ab3512-292c-4b36-98d5-917e5875370e-container.json  4b174a70-fb0c-4530-a93e-bb19fb4c6bb9-result.json  55993bc8-c86c-4fd7-92af-6d5d094a5b7a-result.json  58a7b6ce-78bd-4480-b4fd-e93a60b64a80-container.json  5ba7b34d-c305-4388-ad95-fdb1e9bdcd17-result.json  5c1dca81-8ed4-461a-8fcd-5adaf5a1e732-container.json  5e77ff22-8573-46ac-95ea-5b78aad79985-container.json  7552b44b-9ef1-4d2b-8a34-4cd33c2e3a6d-container.json  7adf9b55-764a-40a6-8779-c16121c86736-container.json  7f577309-d0b6-4549-8e3c-1b6baacdaa5b-container.json  860d68b6-acd1-41c4-8966-ab9e8d7f9b87-result.json  8af13448-f0af-4a6c-b4b6-88866f2f12d0-container.json  8ce2610a-62c2-4185-af92-c50df22a252d-result.json  8d7901b0-208e-48ab-bad3-34ff49ab803f-container.json  8ff19ee1-a830-44ca-aed6-1e54f960f0f3-result.json  91148a02-0519-4293-ab2d-166bf7b3d11f-container.json  9711d9cc-4f1b-4186-bdad-338478df9ed5-result.json  README.md  c45193fb-2d3f-4f7c-8985-1637c1816175-container.json  c602d366-adbb-48bd-b785-2c2b989b5a44-container.json  d085849d-4d1b-42b5-81ca-3a4c7f155380-container.json  d5398dee-dc6b-4500-8112-7691be613c54-container.json  d560b1b0-6b9c-424b-a437-7b50591557cf-container.json  environment.properties  (+12 more)
(+91 files in other folders)
